# Willow

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run.bat
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Documents/: Scratch.md  TODO.md
Examples/: Example.wil
src/: main.c
